# mealie-recipe-dredger

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SETUP_GUIDE.md  custom_sites.json  docker-compose.yml  dredger.py  pyproject.toml  pyrightconfig.json  requirements.txt  sites.json
maintenance/: master_cleaner.py
scripts/docker/: entrypoint.sh  update.sh
scripts/oneoff/: prune_by_sites.py
src/mealie_recipe_dredger/: app.py  cleaner.py  config.py  crawler.py  importer.py  language.py  logging_utils.py  models.py  runtime.py  site_alignment.py  storage.py  url_utils.py  verifier.py  version.py
tests/: test_cleaner.py  test_crawler.py  test_importer.py  test_language.py  test_site_alignment.py  test_site_loading.py  test_url_utils.py  test_verifier.py
