[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mealie-recipe-dredger"
dynamic = ["version"]
description = "Mealie recipe import dredger and cleaner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.65.0",
  "urllib3>=2.0.0",
  "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
mealie-dredger = "mealie_recipe_dredger.app:main"
mealie-cleaner = "mealie_recipe_dredger.cleaner:main"
mealie-align-sites = "mealie_recipe_dredger.site_alignment:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
